=== HEAD

* Add round_timestamps extension for automatically rounding timestamp values to database precision before literalizing (jeremyevans)

* Make rake default task run plugin specs as well as core/model specs (jeremyevans)

* Use all_tables and all_views for Database#tables and #views on Oracle (jeremyevans)

* Use all_tab_cols instead of user_tab cols for defaults parsing in the oracle adapter (jeremyevans)

* Fix recursive mutex locking issue on JRuby when using Sequel::Model(dataset) (jeremyevans) (#841)

* Make composition and serialization plugins support validations on underlying columns (jeremyevans)

* Fix regression in timestamps and table inheritance plugin where column values would not be saved if validation is skipped (jeremyevans) (#839)

* Add pg_enum extension, for dealing with PostgreSQL enums (jeremyevans)

* Add modification_detection plugin, for automatic detection of in-place column value modifications (jeremyevans)

* Speed up using plain strings, numbers, true, false, and nil in json columns if underlying json library supports them (jeremyevans) (#834)

=== 4.12.0 (2014-07-01)

* Support :readonly Database option in sqlite adapter (ippeiukai, jeremyevans) (#832)

* Automatically setup max_length validations for string columns in the auto_validations plugin (jeremyevans)

* Add :max_length entry to column schema hashes for string types (jeremyevans)

* Add :before_thread_exit option to Database#listen_for_static_cache_updates in pg_static_cache_updater extension (jeremyevans)

* Add Database#values on PostgreSQL to create a dataset that uses VALUES instead of SELECT (jeremyevans)

* Add Model#set_nested_attributes to nested_attributes, allowing setting nested attributes options per-call (jeremyevans)

* Use explicit columns when using automatically prepared SELECT statements in the prepared statement plugins (jeremyevans)

* Make Dataset#insert_select on PostgreSQL respect existing RETURNING clause (jeremyevans)
